2.0.8
  o fixes for ggplot2 updates:
    - no use of aes_string
    - geom_line: use of linewidth instead of size
2.0.7
  o tests:
    - add explicit package name for non exported functions
  o combine vertically ggplot: fix for extraction margin widths (ggplot >= 3.5.0)
2.0.6
  o tests - time transformation: fix for scales 1.3.0
  o doc: remove description-like items in itemize (R-devel 11/10/2023)
  o add Cairo to system requirements (for creation of pdf report)
2.0.5
    o reference lines - updates for ggplot2 >= 3.4.0:
      - unit test for 'custom subject variable' more generic
      - geom line: switch from size -> linewidth
2.0.4
    o subject profile line plot: fix unit test random generation of subject IDs
2.0.3
    o add tests for getNLinesSubjectProfile
2.0.2
    o fix issue empty page start report
    o fix issue figure overflows page for parameter var with multiple lines
    o interval plot: fix issue small height for non specified time start/end shape var 
    o get shape palette patient profiles: fix for asText set to FALSE
    o time profile interval plot: remove deprecated param timeLabel (replaced by timeLab)
    o subject profile combine: remove spec of timeAlign as a logical (deprecated, replaced by timeAlign = 'all'/'none')
    o unit tests: updates based on independent review
2.0.1
    o vignette: shorten path exported figures (CRAN requirement for Windows)
2.0.0
    o change default color palette to generic: get[Color|Shape|Linetype]PalettePatientProfile
    o fix in case bookmarkVar is a factor
    o new options to set color/shape palette globally
    o figure dir not created if exportFigures is FALSE on Windows
    o no export of getPathTemplate
1.5.0
    o add unit tests
    o no export of subjectProfileTheme
    o subjectProfileTextPlot:
      - fix ordering in case paramNameVar is a factor
      - param value lab is used even if not table
      - table output: 
        - records sorted based on value var (especially for factor)