@@ -2,7 +2,7 @@ Package: patientProfilesVis
 Type: Package
 Title: Visualization of Patient Profiles
 Version: 2.0.8
-Date: 2024-06-12
+Date: 2024-06-13
 Authors@R: c(
   person(given = "Laure", family = "Cougnaud", 
   role = c("aut", "cre"), email = "laure.cougnaud@openanalytics.eu"), 
