@@ -2,6 +2,7 @@
   o fixes for ggplot2 updates:
     - no use of aes_string
     - geom_line: use of linewidth instead of size
+  o subjectProfileIntervalPlot: new caption parameter
 2.0.7
   o tests:
     - add explicit package name for non exported functions
